Refactor unit management and update unit data structure for vampires and humans

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Unit Battle Simulator</title>
+  <title>Vampire Unit Battle Simulator</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -60,20 +60,20 @@
   </style>
 </head>
 <body>
-  <h1>Unit Battle Simulator</h1>
+  <h1>Vampire Unit Battle Simulator</h1>
 
   <div class="container">
     <div class="card">
-      <label for="vampireUnit">Vampire Unit</label>
+      <label for="vampireUnit">Select Vampire Unit</label>
       <select id="vampireUnit"></select>
     </div>
     <div class="card">
-      <label for="humanUnit">Human Unit</label>
+      <label for="humanUnit">Select Human Unit</label>
       <select id="humanUnit"></select>
     </div>
   </div>
 
-  <button onclick="startBattle()">Roll Dice</button>
+  <button onclick="startBattle()">Start Battle</button>
 
   <div class="results" id="results"></div>
 
