--- a/index.html
+++ b/index.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"/>
-<title>VtM Battle Manager</title>
-<style>
-  :root{--bg:#1a1a1a;--panel:#2a2a2a;--accent:#b30000;}
-  *{box-sizing:border-box}
-  body{margin:0;font-family:Segoe UI,Arial,sans-serif;background:var(--bg);color:#eee;height:100vh;display:flex}
-  /* Left-hand main column */
-  .main{flex:1;padding:1.5rem;display:flex;flex-direction:column;gap:1.5rem;overflow:auto}
-  h1,h2{margin:.2rem 0;text-align:center}
-  select,button{padding:4px 6px;font-size:1rem}
-  button{background:var(--accent);border:0;border-radius:4px;color:#fff;cursor:pointer}
-  button.small{padding:0 6px;font-size:.85rem}
-  .card{background:var(--panel);padding:1rem;border-radius:8px;box-shadow:0 2px 6px rgba(0,0,0,.4)}
-  .flex{display:flex;gap:1rem;flex-wrap:wrap;justify-content:center}
-  /* Right-hand roster sidebar */
-  #rosterPane{width:320px;background:#222;padding:1rem;overflow-y:auto}
-  .roster-unit{display:flex;flex-direction:column;margin:6px 0;padding:6px;border:1px solid #444;border-radius:6px}
-  .roster-head{display:flex;justify-content:space-between;align-items:center}
-  .badges{margin-top:4px;font-size:.8rem;display:flex;gap:4px;flex-wrap:wrap}
-  .badge{background:#444;border-radius:4px;padding:1px 4px}
-  .trait{background:#555}
-  #results{background:#333;padding:1rem;border-radius:8px;max-width:800px;margin:0 auto}
-  hr{border:0;height:1px;background:#555;margin:1rem 0}
-</style>
+  <meta charset="UTF-8"/>
+  <title>VtM Battle Manager</title>
+  <link rel="stylesheet" href="styles.css">
+  <script defer src="battle.js"></script>
 </head>
 <body>
   <!-- Roster sidebar -->
@@ -34,7 +14,7 @@
   <div class="main">
     <h1>Vampire vs Human Dice Roller</h1>
 
-    <!-- Recruit -->
+    <!-- Recruit panels -->
     <div class="flex">
       <div class="card">
         <h2>Recruit Vampire</h2>
@@ -59,12 +39,7 @@
           <select id="humanActiveSelect" style="min-width:180px"></select>
         </label>
         <label>Terrain:
-          <select id="terrainSelect">
-            <option value="plains">Plains / Fields</option>
-            <option value="hills">Hills</option>
-            <option value="forest">Forest / Wild</option>
-            <option value="urban">Urban / City / Fort</option>
-          </select>
+          <select id="terrainSelect"></select>
         </label>
       </div>
       <button style="margin-top:1rem" onclick="startBattle()">Roll Dice!</button>
@@ -73,7 +48,5 @@
     <!-- Battle log -->
     <div id="results"></div>
   </div>
-
-<script src="battle.js"></script>
 </body>
 </html>
