Add trait reference section to the battle manager UI

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 
     <!-- Battle log -->
     <div id="results"></div>
+
+    <!-- Trait reference -->
+    <div class="card">
+      <h2>Trait Reference</h2>
+      <div id="traitRef"></div>
+    </div>
   </div>
 </body>
 </html>
