Add terrain data and implement trait effects rendering in battle results

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
     <div id="resultsPanel" class="panel">
       <h2>Results</h2>
       <div id="results"></div>
+      <div id="traitInfo">
+        <h4>Trait Effects</h4>
+        <div id="vampireTraits" class="trait-block"></div>
+        <div id="humanTraits" class="trait-block"></div>
+      </div>
     </div>
   </main>
 
