New branch with local server, and map

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
+  <header>
+    <h1>VTM Inquisition Wars</h1>
+    <a class="nav-button" href="mapPage.html">Open Strategic Map</a>
+  </header>
   <main>
     <!-- Left: Roster -->
     <div id="rosterPanel" class="panel">
