--- a/mapPage.html
+++ b/mapPage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Inquisition Wars Map</title>
-  <link rel="stylesheet" href="../assets/css/mapStyle.css">
+  <link rel="stylesheet" href="./assets/css/mapStyle.css">
 
 </head>
 <body>
